@@ -5,3 +5,11 @@
     border-radius: 0 0 5px 5px;
     z-index: 99;
 }
+
+@media (max-width: 992px) {
+    .float-icon {
+        right: 0;
+        top: 48px;
+        border-radius: 5px 0 0 5px;
+    }
+}
